--- a/accounts.html
+++ b/accounts.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Open Account | Clahan Bank</title>
+  <title>Open Account | GRT Bank</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./css/style.css" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm sticky-top">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">Clahan Bank</a>
+      <a class="navbar-brand fw-bold" href="index.html">GRT Bank</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -151,7 +151,7 @@
 
   <footer class="py-4 bg-primary text-white">
     <div class="container text-center">
-      <small>&copy; <span id="year"></span> Clahan Bank. All rights reserved.</small>
+      <small>&copy; <span id="year"></span> Grt Bank. All rights reserved.</small>
     </div>
   </footer>
 
