--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Clahan Bank | Digital Banking</title>
+  <title>GRT Bank | Digital Banking</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./css/style.css" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm sticky-top">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">Clahan Bank</a>
+      <a class="navbar-brand fw-bold" href="index.html">GRT Bank</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -32,7 +32,7 @@
       <div class="row align-items-center g-4">
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold">Truth, Trust, Transparency</h1>
-          <p class="lead mb-4">Welcome to <strong>Clahan Bank</strong>—your partner for Savings, Current & Corporate Accounts, Insurance, and Balance Transfers.</p>
+          <p class="lead mb-4">Welcome to <strong>GRT Bank</strong>—your partner for Savings, Current & Corporate Accounts, Insurance, and Balance Transfers.</p>
           <a href="accounts.html" class="btn btn-light btn-lg fw-semibold">Open an Account</a>
         </div>
         <div class="col-lg-6 text-center">
@@ -103,15 +103,15 @@
     <div class="container">
       <div class="row g-4 align-items-center">
         <div class="col-lg-6">
-          <h2 class="fw-bold mb-3">About Clahan Bank</h2>
+          <h2 class="fw-bold mb-3">About GRT Bank</h2>
           <p>We provide modern banking services with a digital-first experience. Our mission: safe, simple, and smart banking for everyone.</p>
         </div>
         <div class="col-lg-6">
           <div class="p-4 bg-white rounded-4 shadow-sm">
             <h5 class="fw-bold mb-3">Get in touch</h5>
             <ul class="list-unstyled mb-0">
-              <li><strong>Email:</strong> support@clahanbank.com</li>
-              <li><strong>Phone:</strong> +91-98765-43210</li>
+              <li><strong>Email:</strong> support@grtbank.com</li>
+              <li><strong>Phone:</strong> +91-8500194628</li>
               <li><strong>Address:</strong> Hyderabad, India</li>
             </ul>
           </div>
@@ -123,7 +123,7 @@
   <!-- Footer -->
   <footer class="py-4 bg-primary text-white">
     <div class="container text-center">
-      <small>&copy; <span id="year"></span> Clahan Bank. All rights reserved.</small>
+      <small>&copy; <span id="year"></span> GRT Bank. All rights reserved.</small>
     </div>
   </footer>
 
