--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <ul class="list-unstyled mb-0">
               <li><strong>Email:</strong> support@grtbank.com</li>
               <li><strong>Phone:</strong> +91-8500194628</li>
-              <li><strong>Address:</strong> Hyderabad, India</li>
+              <li><strong>Address:</strong> Bangalore, India</li>
             </ul>
           </div>
         </div>
